<resources>
    <string name="app_name">E-bazar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configurações</string>
    <string name="novoVest">Novo Vestuário</string>
    <string name="listOng">Listar ONGs</string>
    <string name="novaOng">Nova ONG</string>

    <string name="title_activity_lista_ong">ONGs</string>
    <string name="listVest">Listar Vestuário</string>
    <string name="title_activity_cadastro_vestuario">Cadastraar Vestuario</string>
    <string name="carrinho">Carrinho</string>
    <string name="title_activity_carrinho">Carrinho</string>
    <string name="title_activity_cadastro_ong">Cadastrar Ong</string>

    <string-array name="ufs">
        <item/>
        <item>AC</item>
        <item>AL</item>
        <item>AM</item>
        <item>AP</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MG</item>
        <item>MS</item>
        <item>MT</item>
        <item>PA</item>
        <item>PB</item>
        <item>PE</item>
        <item>PI</item>
        <item>PR</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RO</item>
        <item>RR</item>
        <item>RS</item>
        <item>SC</item>
        <item>SE</item>
        <item>SP</item>
        <item>TO</item>
    </string-array>
</resources>
