<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/cadastroVest"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/novoVest" />
        <item
            android:id="@+id/cadastroOng"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/novaOng" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/listVest"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/listVest" />
        <item
            android:id="@+id/listOng"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/listOng" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/carrinho"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/carrinho" />
    </group>
</menu>
